# CMakeGuide

./: README.md
demo0/: README.md
demo1/: CMakeLists.txt  README.md  info.cpp  info.h  main.cpp
demo11/: CMakeLists.txt  README.md  main.cpp
demo12/: CMakeLists.txt  README.md  main.cpp
demo12/include/: interface.h
demo12/modules/: CMakeLists.txt
demo12/modules/module2/include/: module_2.h
demo12/src/: interface.cpp
demo13/: CMakeLists.txt  main.cpp
demo13/src/: CMakeLists.txt
demo13/src/module1/include/: module_1.h
demo13/src/module1/src/: module_1.cpp
demo13/src/module2/src/: module_2.cpp
demo13/test/: CMakeLists.txt
demo13/test/inc/: test.h
demo13/test/src/: test.cpp
demo2/: CMakeLists.txt  README.md
demo3/: CMakeLists.txt  README.md
demo3/inc/: info.h
demo3/src/: info1.cpp  info2.cpp
demo4/: CMakeLists.txt  README.md
demo4/src/: info3.cpp
demo5/: CMakeLists.txt  README.md  main.cpp
demo6/: CMakeLists.txt  README.md  main.cpp
demo7/: CMakeLists.txt  README.md  main.cpp
demo7/comm/: CMakeLists.txt
demo7/include/calc/: log.h
demo7/include/test/: log.h
demo7/project/: CMakeLists.txt
demo7/project/calc/inc/: calc.h
demo7/project/color/inc/: color.h
demo7/project/color/src/: color.cpp
demo7/project/inc/: ext.h
demo7/test/: CMakeLists.txt
demo7/test/inc/: test.h
demo7/test/src/: main.cpp
demo8/: CMakeLists.txt
demo9/: CMakeLists.txt  README.md  run.sh
demo9/comm/inc/: info.h
demo9/project/calc/src/: calc.cpp
demo9/project/color/src/: color.cpp
demo9/project/inc/: status.h
demo9/project/priv/: log.h
demo9/test/: CMakeLists.txt
demo9/test/inc/: test.h
demo9/test/src/: main.cpp  test_calc.cpp  test_color.cpp
